# phosphor-inventory-manager

./: .clang-format  .gitignore  MAINTAINERS  Makefile.am  OWNERS  README.md  actions.hpp  app.cpp  association_manager.cpp  association_manager.hpp  configure.ac  errors.cpp  errors.hpp  events.cpp  events.hpp  filters.cpp  filters.hpp  functor.cpp  functor.hpp  gen_serialization.hpp  gen_serialization.hpp.mako  gen_serialization.mako.hpp  generate_makefile.sh  generated.cpp.mako  generated.mako.cpp  groups  interface_ops.hpp  make_example.py  manager.cpp  manager.hpp  meson.build  meson.options  meson_options.txt  pimgen.py  pimgenng.py  project.config  remove_association.cpp  remove_association.hpp  remove_association_main.cpp  serialize.hpp  (+3 more)
example/: interfaces.yaml
example/events/: match2.yaml
example/events.d/: match1.yaml  match2.yaml
example/extra_interfaces.d/xyz/openbmc_project/Example/: Iface2.interface.yaml
example/interfaces.d/: example.yaml
example/interfaces/xyz/openbmc_project/Example/: Iface1.interface.yaml  Iface2.interface.yaml
examples/: match1.yaml  match2.yaml
subprojects/: nlohmann.wrap
test/: .gitignore  Makefile.am  associations_test.cpp  interface_ops_test.cpp  meson.build  serialize_test.cpp  test.cpp  types_test.cpp  utils_test.cpp
xyz/openbmc_project/Inventory/Manager/: server.hpp
