option(
    'tests', type : 'feature',
    value: 'enabled',
    description : 'Build tests'
)

option(
    'associations', type : 'feature',
    value: 'enabled',
    description : 'Enable creating D-Bus associations from a JSON definition'
)

option(
    'YAML_PATH', type: 'string',
    value: 'example',
    description: 'The path to the yaml config files.'
)

option(
    'IFACES_PATH', type: 'string',
    value: '',
    description: 'The path to the interfaces PIM can create.'
)